cmake_minimum_required (VERSION 3.10)
include_directories(coreclr_headers/src/pal/prebuilt/inc)
include_directories(coreclr_headers/src/inc)
if(UNIX)
  include_directories(coreclr_headers/src/pal/inc/rt)
  include_directories(coreclr_headers/src/pal/inc)
  string(APPEND CMAKE_SHARED_LINKER_FLAGS " -Wl,--no-undefined")
  string(APPEND CMAKE_CXX_FLAGS " -Wno-invalid-noreturn -fPIC -fms-extensions -std=c++11")
endif(UNIX)
add_library (Microsoft.BPerf.CoreCLRProfiler SHARED "BPerfProfilerCallback.cpp" "BPerfProfilerCallback.h" "Microsoft.BPerf.CoreCLRProfiler.cpp" "ETWHeaders.h" "CQuickBytes.h" "CQuickBytes.cpp" "PrettyPrintSig.cpp" "sha1.cpp" "sha1.h" "profiler_pal.h" "PortableString.h" "exports.def")
